--- a/films.html
+++ b/films.html
@@ -81,7 +81,7 @@
 
                 <section id="Dust">
 
-                  <a href="http://artist.nccu.edu.tw/flm_01.html" ><img src="http://artist.nccu.edu.tw/images/films/flm_1.jpg" alt="film01"/></a>
+                  <a href="film_01.html" ><img src="http://artist.nccu.edu.tw/images/films/flm_1.jpg" alt="film01"/></a>
                    <img src="http://artist.nccu.edu.tw/images/films/ink2.png" alt="film2"/>
                      <a href="http://artist.nccu.edu.tw/flm_01.html" ><strong>&nbsp;戀戀風塵</strong>
                        <br><span>&nbsp;&nbsp;Dust in wind</span>
