--- a/films.html
+++ b/films.html
@@ -51,7 +51,7 @@
 
                 <section>
                             <p >
-        政大藝文中心在3--5月精挑四部經典國片，皆為台灣80年代狂飆時期重量級導演的代表作，包括侯孝賢的<a href="http://artist.nccu.edu.tw/flm_01.html"><em>「戀戀風塵」</em></a>、楊德昌的<a href="http://artist.nccu.edu.tw/flm_02.html" ><em>「恐怖份子」</em></a>、李安的<a href="http://artist.nccu.edu.tw/flm_03.html" ><em>「喜宴」</em></a>、蔡明亮的<a href="http://artist.nccu.edu.tw/flm_04.html" ><em>「愛情萬歲」</em></a>，將復刻修復版呈現於政大校園之中，藉此希望師生們共同回顧經典國片的八○榮光。
+        政大藝文中心在3--5月精挑四部經典國片，皆為台灣80年代狂飆時期重量級導演的代表作，包括侯孝賢的<a href="film_01.html"><em>「戀戀風塵」</em></a>、楊德昌的<a href="http://artist.nccu.edu.tw/flm_02.html" ><em>「恐怖份子」</em></a>、李安的<a href="http://artist.nccu.edu.tw/flm_03.html" ><em>「喜宴」</em></a>、蔡明亮的<a href="http://artist.nccu.edu.tw/flm_04.html" ><em>「愛情萬歲」</em></a>，將復刻修復版呈現於政大校園之中，藉此希望師生們共同回顧經典國片的八○榮光。
                             </p>
                 </section>
 
@@ -83,7 +83,7 @@
 
                   <a href="film_01.html" ><img src="http://artist.nccu.edu.tw/images/films/flm_1.jpg" alt="film01"/></a>
                    <img src="http://artist.nccu.edu.tw/images/films/ink2.png" alt="film2"/>
-                     <a href="http://artist.nccu.edu.tw/flm_01.html" ><strong>&nbsp;戀戀風塵</strong>
+                     <a href="film_01.html" ><strong>&nbsp;戀戀風塵</strong>
                        <br><span>&nbsp;&nbsp;Dust in wind</span>
                     </a><br><br>
                              <span>03.15</span>（三）19:30-21:30<br />
