--- a/reg.html
+++ b/reg.html
@@ -3,25 +3,27 @@
   <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>報名表單</title>
+  <link rel="stylesheet" type="text/css" href="reg.css">
+  <title>報名6</title>
 </head>
 <body>
-<h1>報名表單</h1>
+<h1>報名6</h1>
+
   <form action="https://docs.google.com/forms/d/e/1FAIpQLScM4B6u7nOkNQqUOlSBn7fKXm5cjuno14nyCKRlA4XyjSY9Qg/formResponse">
-   <label for="name">姓名</label>
-  <input type="text" name="entry.1339495092" id="name" required>
+   
+  <input type="text" name="entry.1339495092" id="name" required placeholder="姓名">
   <br>
-  <label for="phone">電話</label>
-   <input type="tel" name="entry.795504394" id="phone" required pattern="[0-9]{10}">
+  
+   <input type="tel" name="entry.795504394" id="phone" required pattern="[0-9]{10}" placeholder="電話">
   <br>
-  <label for="mail">信箱</label>
-  <input type="email" name="entry.560282373" id="mail" required>
+  
+  <input type="email" name="entry.560282373" id="mail" required placeholder="信箱">
   <br>
-  <label for="birth">生日</label>
-  <input type="date" id="birth" name="entry.324774019" required>
+ 
+  <input type="date" id="birth" name="entry.324774019" required placeholder="生日">
    <br>
-  <label for="college">學院</label>
-  <input type="text" list="datalist" id="college" name="entry.1944781450" required>
+  
+  <input type="text" list="datalist" id="college" name="entry.1944781450" required placeholder="學院">
   <datalist id="datalist">
      <option>文學院</option>
      <option>商學院</option>
@@ -35,7 +37,7 @@
   </datalist>
   <br>
   <input type="hidden" name="entry.189820201" value="103103031">
-  <input type="submit" value="註冊">
+  <input type="submit" value="註冊" id="re">
   </form>  
   
   </body>
